--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,7 +18,7 @@ canvas, details, embed, figure, figcaption,
 footer, header, hgroup, menu, nav, output, ruby,
 section, summary, time, mark, audio, video {
 	margin: 0;
-	padding: 0;
+	padding: 7px ;
 	border: 0;
 	font-size: 100%;
 	font: inherit;
@@ -422,6 +422,7 @@ input, select, textarea {
 
 		.row > .col-7 {
 			width: 58.33333%;
+
 		}
 
 		.row > .off-7 {
@@ -1846,6 +1847,7 @@ input, select, textarea {
 		outline: 0;
 		padding: 0 3.75em;
 		position: relative;
+		top: 35px;
 		text-align: center;
 		text-decoration: none;
 		text-transform: uppercase;
@@ -2324,11 +2326,47 @@ input, select, textarea {
 		text-decoration: none;
 		width: 100%;
 	}
+	input[type="date"] {
+	        -moz-appearance: none;
+    		-webkit-appearance: none;
+    		-ms-appearance: none;
+    		appearance: none;
+    		background: rgba(255, 255, 255, 0.05);
+    		border-radius: 0.25em;
+    		border: none;
+    		border: solid 1px rgba(255, 255, 255, 0.15);
+    		color: inherit;
+    		display: block;
+    		outline: 0;
+    		position: relative
+    		left: 300px
+    		padding-top: 12px;
+    	    text-decoration: none;
 
+	}
+
+input[type="number"] {
+	-moz-appearance: none;
+    		-webkit-appearance: none;
+    		-ms-appearance: none;
+    		appearance: none;
+    		background: rgba(255, 255, 255, 0.05);
+    		border-radius: 0.25em;
+    		border: none;
+    		border: solid 1px rgba(255, 255, 255, 0.15);
+    		color: inherit;
+    		display: block;
+    		outline: 0;
+    		position: relative
+    		left: 300px
+    	    text-decoration: none;
+    		width: 100%;
+	}
 		input[type="text"]:invalid,
 		input[type="password"]:invalid,
 		input[type="email"]:invalid,
 		input[type="tel"]:invalid,
+		input[type="date"]:invalid,
 		select:invalid,
 		textarea:invalid {
 			box-shadow: none;
@@ -2338,6 +2376,7 @@ input, select, textarea {
 		input[type="password"]:focus,
 		input[type="email"]:focus,
 		input[type="tel"]:focus,
+		input[type="date"]:invalid,
 		select:focus,
 		textarea:focus {
 			border-color: #ffffff;
@@ -2370,6 +2409,7 @@ input, select, textarea {
 	input[type="text"],
 	input[type="password"],
 	input[type="email"],
+	input[type="date"],
 	select {
 		height: 2.75em;
 	}
@@ -2399,7 +2439,7 @@ input, select, textarea {
 		input[type="checkbox"] + label,
 		input[type="radio"] + label {
 			text-decoration: none;
-			color: rgba(255, 255, 255, 0.55);
+			color: rgba(255, 255, 255, 1);
 			cursor: pointer;
 			display: inline-block;
 			font-size: 1em;
@@ -2407,6 +2447,7 @@ input, select, textarea {
 			padding-left: 2.4em;
 			padding-right: 0.75em;
 			position: relative;
+			top:
 		}
 
 			input[type="checkbox"] + label:before,
@@ -2872,10 +2913,11 @@ input, select, textarea {
 		margin: 0 0 1.5em 0;
 	}
 
-	header h2 + p {
+	header h2 {
 		font-size: 1.25em;
-		margin-top: -1em;
-		line-height: 1.5em;
+            font-weight: bold;
+            line-height: 1.5;
+            margin: 0 0 0.5em 0;
 	}
 
 	header h3 + p {
@@ -3206,9 +3248,7 @@ input, select, textarea {
 	}
 
 		.wrapper > .inner {
-			padding: 5em 5em 3em 5em ;
-			max-width: 100%;
-			width: 75em;
+			width: 100%;
 		}
 
 			@media screen and (max-width: 1680px) {
